# tessellate

./: CMakeLists.txt  LICENSE  README.md
cmake/: Conan.cmake  ExportLibrary.cmake  SetUp.cmake  config.h.in  tessellateConfig.cmake.in  tessellateConfigVersion.cmake.in
include/: homog2d.hpp
include/tessellate/: fold.hpp  pleat.hpp
test/: CMakeLists.txt  test_fold.cpp  test_pleat.cpp
